--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="https://imgs.search.brave.com/XJzQgTVz-Q7XJKbEYtWN54GyHma5rvfXgvK7-zdj_R0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9jZG4t/MC5lbW9qaXMud2lr/aS9lbW9qaS1waWNz/L2dvb2dsZS9ncmFk/dWF0aW9uLWNhcC1n/b29nbGUucG5n" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Student Grade Management System</title>
   </head>
